dropdown bar changes

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,7 +18,7 @@
         <ul class="nav-left">
 
 
-            <li class="logo"> 
+            <li class="logo">
                 <a href="index.html">
                     <img src="/Frontend/Essentials/Name.svg">
                 </a>
@@ -37,18 +37,25 @@
                     Trade
                     <img src="/Frontend/Essentials/down-arrow.svg" class="down-arrow">
                 </span>
+
+                <ul class="dropdown-menu">
+                    <li>Trade Spot</li>
+                    <li>Trade Futures</li>
+                </ul>
             </li>
 
             <li class="nav-item dropdown">
                 <span>
                     Buy
                     <img src="/Frontend/Essentials/down-arrow.svg" class="down-arrow">
-                    <ul class="dropdown-menu">
-                        <li>Buy Crypto With Usd</li>
-                        <li>Convert Crypto</li>
-                    </ul>
                 </span>
+
+                <ul class="dropdown-menu">
+                    <li>Buy with Crypto</li>
+                    <li>Convert Crypto</li>
+                </ul>
             </li>
+
 
             <li class="nav-item">About</li>
         </ul>
