--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -25,11 +25,8 @@
             </li>
 
 
-            <li class="nav-item dropdown">
-                <span>
-                    Market
-                    <img src="/Frontend/Essentials/down-arrow.svg" class="down-arrow">
-                </span>
+            <li class="nav-item ">
+                Market
             </li>
 
             <li class="nav-item dropdown">
@@ -39,8 +36,14 @@
                 </span>
 
                 <ul class="dropdown-menu">
-                    <li>Trade Spot</li>
-                    <li>Trade Futures</li>
+                    <li>
+                        <h3 class="dropdown-menu-li-header">Trade Spot</h3>
+                        <p>Now buy crypto with USDT</p>
+                    </li>
+                    <li>
+                        <h3>Trade Futures</h3>
+                        <p>Try Leverage Trading in USDT</p>
+                    </li>
                 </ul>
             </li>
 
@@ -51,13 +54,47 @@
                 </span>
 
                 <ul class="dropdown-menu">
-                    <li>Buy with Crypto</li>
-                    <li>Convert Crypto</li>
+                    <li>
+                        <h3 class="dropdown-menu-li-header">Buy with Crypto</h3>
+                        <p>Now buy crypto with Crypto</p>
+                    </li>
+                    <li>
+                        <h3 class="dropdown-menu-li-header">Convert Crypto</h3>
+                        <p> Crypto to Crypto Conversion becomes easier</p>
+                    </li>
                 </ul>
             </li>
 
 
-            <li class="nav-item">About</li>
+            <li class="nav-item dropdown">
+
+                <span>
+                    Tools
+                    <img src="/Frontend/Essentials/down-arrow.svg" class="down-arrow">
+                </span>
+
+                <ul class="dropdown-menu">
+                    <li>
+                        <h3 class="dropdown-menu-li-header">Trading View</h3>
+                        <p>Ultimate chart Viewer with mulitple options</p>
+                    </li>
+                    <li>
+                        <h3 class="dropdown-menu-li-header">Coinglass</h3>
+                        <p> A powerful Tool for analysis of heatmaps , liqduidty and more</p>
+                    </li>
+                    <li>
+                        <h3 class="dropdown-menu-li-header">CryptoVerse</h3>
+                        <p>Into the CryptoVerse - A Benjamin Cowen made tool
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="dropdown-menu-li-header">CryptoVerse</h3>
+                        <p>Into the CryptoVerse - A Benjamin Cowen made tool
+                        </p>
+                    </li>
+                </ul>
+
+            </li>
         </ul>
 
         <ul class="ul-nav-right">
