--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -88,8 +88,8 @@
                         </p>
                     </li>
                     <li>
-                        <h3 class="dropdown-menu-li-header">CryptoVerse</h3>
-                        <p>Into the CryptoVerse - A Benjamin Cowen made tool
+                        <h3 class="dropdown-menu-li-header">CryptoBubbles</h3>
+                        <p>Simplified version of showing all crypto prices in small bubbles to identify trends
                         </p>
                     </li>
                 </ul>
@@ -188,7 +188,7 @@
     <section class="hero3">
         <div class="video-wrapper">
 
-            <iframe src="https://www.youtube.com/embed/2-G-Un_kw_w?si=1ZgWQLs0KwNfpvsK&amp;start=27"
+            <iframe src="https://www.youtube.com/embed/xHU5MHuUSKI?si=KuntXYl0f78s5qSL&amp;start=60"
                 title="YouTube video" frameborder="0" allowfullscreen>
             </iframe>
 
@@ -214,6 +214,83 @@
             </div>
 
         </div>
+
+    </section>
+    <section class="hero4">
+
+        <div class="hero4-container">
+            
+        </div>
+
+
+    </section>
+
+    <section class="footer">
+        <div class="footer-container">
+
+            
+            <div class="footer-brand">
+                <h2 class="footer-logo">LIQUIDITY<span>-X</span></h2>
+
+                <div class="social-icons">
+                    <span>🌐</span>
+                    <span>🐦</span>
+                    <span>📸</span>
+                    <span>▶️</span>
+                    <span>💬</span>
+                </div>
+            </div>
+
+            <!-- COLUMN 1 -->
+            <div class="footer-col">
+                <h4>About</h4>
+                <ul>
+                    <li>About Liquidity-X</li>
+                    <li>Press Room</li>
+                    <li>Community</li>
+                    <li>Announcements</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
+
+            <!-- COLUMN 2 -->
+            <div class="footer-col">
+                <h4>Services</h4>
+                <ul>
+                    <li>One-Click Buy</li>
+                    <li>P2P Trading</li>
+                    <li>Referral Program</li>
+                    <li>Institutional Services</li>
+                    <li>Tax API</li>
+                </ul>
+            </div>
+
+            <!-- COLUMN 3 -->
+            <div class="footer-col">
+                <h4>Support</h4>
+                <ul>
+                    <li>Help Center</li>
+                    <li>Submit a Request</li>
+                    <li>User Feedback</li>
+                    <li>Trading Fees</li>
+                    <li>API</li>
+                </ul>
+            </div>
+
+            <!-- COLUMN 4 -->
+            <div class="footer-col">
+                <h4>Products</h4>
+                <ul>
+                    <li>Spot Trading</li>
+                    <li>Futures</li>
+                    <li>Earn</li>
+                    <li>Launchpad</li>
+                    <li>TradingView</li>
+                </ul>
+            </div>
+
+        </div>
+
 
     </section>
 
